Closed Bug 1278453 Opened 8 years ago Closed 8 years ago

Assertion failure: mCallDataStorage.Contains(aCallData), at dom/base/Console.cpp:2316

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jruderman, Assigned: baku)

Details

(Keywords: assertion, testcase, Whiteboard: btpp-followup-2016-06-14)

Attachments

(4 files)

Assertion failure: mCallDataStorage.Contains(aCallData), at dom/base/Console.cpp:2316
1. Click button: "Start test"
2. Click button: "Finish test"
Attached file stack
funfuzz/dom/automation/domInteresting.py build p.html
baku, can you please take a look?
Flags: needinfo?(amarchesini)
Whiteboard: btpp-followup-2016-06-14
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attached patch console.patchSplinter Review
Attachment #8761074 - Flags: review?(bugs)
Comment on attachment 8761074 [details] [diff] [review]
console.patch

> Console::UnstoreCallData(ConsoleCallData* aCallData)
> {
>   AssertIsOnOwningThread();
> 
>   MOZ_ASSERT(aCallData);
>-  MOZ_ASSERT(mCallDataStorage.Contains(aCallData));
>+
>+  if (!mCallDataStorage.Contains(aCallData)) {
>+    // If we are here it's because the window has been closed while we were
>+    // doing some Console operation and Shutdown() has been called in the
>+    // meantime.
>+    return;
>+  }
>+
>   MOZ_ASSERT(!mCallDataStoragePending.Contains(aCallData));
> 
>   mCallDataStorage.RemoveElement(aCallData);
> }


I would just remove the assertion and add a comment that
mCallDataStorage.RemoveElement may not do anything if ...
Attachment #8761074 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f22cca9ad502
Console API should be able to deal with arguments that close the window in toString(), r=smaug
https://hg.mozilla.org/mozilla-central/rev/f22cca9ad502
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: