Bug 1278453 - Console API should be able to deal with arguments that close the window in toString(), r=smaug